Bug 30374 - ums 3D lock since drm: kill kernel_context_switch callbacks 1da3f87ebb7edb3e0b829ec4bbe5fb3d9d93986f
Summary: ums 3D lock since drm: kill kernel_context_switch callbacks 1da3f87ebb7edb3e0...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/R600 (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-25 08:24 UTC by Andy Furniss
Modified: 2010-09-26 01:52 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
readd drm_lock_free (722 bytes, patch)
2010-09-25 11:33 UTC, Daniel Vetter
Details | Splinter Review
readd drm_lock_free (1.06 KB, patch)
2010-09-25 14:28 UTC, Daniel Vetter
Details | Splinter Review

Description Andy Furniss 2010-09-25 08:24:00 UTC
git d-r-t, mesa, ddx and xserver. rv790 PCIE card.

UMS radeon/r600c with current d-r-t soft locks when a mesa demo is run.

Log shows many

[drm:drm_lock_take] *ERROR* 1 holds heavyweight lock

bisect came up with

1da3f87ebb7edb3e0b829ec4bbe5fb3d9d93986f is first bad commit
commit 1da3f87ebb7edb3e0b829ec4bbe5fb3d9d93986f
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Mon Aug 23 22:53:24 2010 +0200

    drm: kill kernel_context_switch callbacks
    
    Not used by any in-kernel driver. So drop it.
Comment 1 Daniel Vetter 2010-09-25 11:33:52 UTC
Created attachment 38952 [details] [review]
readd drm_lock_free

Does this patch help?
Comment 2 Andy Furniss 2010-09-25 14:15:38 UTC
(In reply to comment #1)
> Created an attachment (id=38952) [details]
> readd drm_lock_free
> 
> Does this patch help?

  CC [M]  drivers/gpu/drm/drm_lock.o
drivers/gpu/drm/drm_lock.c: In function 'drm_unlock':
drivers/gpu/drm/drm_lock.c:164: error: 'master' undeclared (first use in this function)
drivers/gpu/drm/drm_lock.c:164: error: (Each undeclared identifier is reported only once
drivers/gpu/drm/drm_lock.c:164: error: for each function it appears in.)
make[3]: *** [drivers/gpu/drm/drm_lock.o] Error 1
make[2]: *** [drivers/gpu/drm] Error 2
make[1]: *** [drivers/gpu] Error 2
make: *** [drivers] Error 2
Comment 3 Daniel Vetter 2010-09-25 14:28:56 UTC
Created attachment 38955 [details] [review]
readd drm_lock_free

Sorry for wasting your time. This time actually compile-tested.
Comment 4 Andy Furniss 2010-09-25 15:06:58 UTC
(In reply to comment #3)
> Created an attachment (id=38955) [details]
> readd drm_lock_free
> 
> Sorry for wasting your time. This time actually compile-tested.

np and yes, the patch fixes it.
Comment 5 Daniel Vetter 2010-09-26 01:52:45 UTC
Patch merged into drm-core-next.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.